# shelflife

./: Cargo.toml  LICENSE  README.md
docs/superpowers/plans/: 2026-03-19-shelflife-implementation.md
docs/superpowers/specs/: 2026-03-19-shelflife-design.md
src/: config.rs  main.rs  model.rs  output.rs  resolver.rs  signal.rs
src/parsers/: java.rs  lockfile.rs  mod.rs  npm_lockfile.rs  nvmrc.rs  package_json.rs  python.rs
src/registries/: eol.rs  mod.rs  npm.rs
tests/: integration.rs
tests/fixtures/config/: shelflife.toml
tests/fixtures/integration/clean_project/: package-lock.json
tests/fixtures/java/: build.gradle  build_enum.gradle  pom.xml
tests/fixtures/lockfile/: v1.json  v2.json  v3.json
tests/fixtures/nvmrc/: with_comments
tests/fixtures/package_json/: caret_engines.json  with_engines.json
tests/fixtures/python/: pyproject.toml
tests/fixtures/resolver/full_project/: package-lock.json  package.json
