[package]
name = "shelflife"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
owo-colors = "4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
